# QtWebView2

./: pyproject.toml
.github/workflows/: publish-to-pypi.yml
src/qtwebview2/: _anchor.py  widget.py
