[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qtwebview2"
authors = [
  { name="校溯", email="xiaosu@xiaosu.icu" }
]
description = "A lightweight and powerful cross-platform webview widget for Python Qt (PySide/PyQt), powered by wry."
readme = "README.md"
version = "0.6.0rc6"
requires-python = ">=3.10"
license = "MPL-2.0"
license-files = ["LICENSE"]
keywords = ["qt", "qtpy", "pyqt", "pyside", "web", "webview", "wry", "cross-platform"]
classifiers = [
    # Development Status
    "Development Status :: 4 - Beta", # Beta is perfect for a 0.x.y release

    # Supported Python Versions
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",

    # Operating System
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",

    # Intended Audience & Topic
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces"
]
dependencies = [
    "qtpy~=2.0",
    "wryview~=0.3.2",
    "typing-extensions~=4.13"
]

[project.urls]
Homepage = "https://github.com/xiaosuawa/QtWebView"

[tool.setuptools]
package-dir = { "" = "src" }
